--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,10 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     
+    # ⬅️ ADD THIS BLOCK to grant write permission for deploying
+    permissions:
+      contents: write 
+    
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
